# MultipleCueEstimation

./: CMakeLists.txt  CameraMultipleCueEstimationList.sh  DataStructs.h  FEstimationMethod.cpp  FEstimationMethod.h  FEstimatorHLines.cpp  FEstimatorHLines.h  FEstimatorHPlanes.cpp  FEstimatorHPlanes.h  FEstimatorHPoints.cpp  FEstimatorHPoints.h  FEstimatorLines.cpp  FEstimatorLines.h  FEstimatorPlanes.cpp  FEstimatorPlanes.h  FEstimatorPoints.cpp  FEstimatorPoints.h  FeatureMatchers.cpp  FeatureMatchers.h  LevenbergMarquardtGeneral.h  LevenbergMarquardtLines.h  LevenbergMarquardtPoints.h  MCE.cpp  MCE.h  MCE.sh  MultipleCueEstimation.cpp  MultipleCueEstimation.h  MultipleCueEstimation.sh  MultipleCueEstimationList.sh  README.md  StartCameraMultipleCueEstimationList.sh  StartMultipleCueEstimation.sh  StartMultipleCueEstimationList.sh  Statics.h  Utility.cpp  Utility.h  evaluation.m  evaluation_cameras.m  main.cpp
ComputeCameras/: CMakeLists.txt  ComputeCameras.cpp
Datasets/Source1/: source.txt
Dependencies/arpack++_fixed/: ardgsym.h  ardssym.h  arerror.h~  arhbmat.h~  arlssym.h~  arrseig.h~  arrssym.h  arseig.h  arseig.h~  arssym.h~
LineMatchingSourceCode/: CMakeLists.txt  CMakeLists.txt~  EDLineDetector.cpp  LineDescriptor.cpp  LineMatcher.cpp  LineMatcher.hh  PairwiseLineMatching.cpp  Readme.txt  TestLineMatchingAlgorithm.cpp
Results/: resultList.csv
clm/: CMakeLists.txt  README  README.jp  SevenpointLevenbergMarquardt.cpp  SevenpointLevenbergMarquardt.h  clm.m  clm_c_bridge.m  clm_c_bridge.m~  makefile~  test.m  test.m~
