PROJECT(MultipleCueEstimation)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(OpenCV_DIR $ENV{OPENCV_DIR})
SET(Eigen_DIR $ENV{EIGEN_DIR})
SET(BIAS_DIR $ENV{BIAS_ROOT_DIR})

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(BIAS REQUIRED)

SET(BUILD_SHARED_LIBS ON)
SET(CMAKE_BUILD_TYPE Release)

INCLUDE_DIRECTORIES(/LineMatchingSourceCode)
INCLUDE_DIRECTORIES(${BIAS_INCLUDE_DIR})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${BIAS_CXX_FLAGS}")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}  ${BIAS_C_FLAGS}")

INCLUDE(${BIAS_USE_FILE})
LINK_DIRECTORIES( ${BIAS_LINK_DIRECTORIES})

MESSAGE(OpenCV: ${OpenCV_DIR})
MESSAGE(Eigen: ${Eigen_DIR})
MESSAGE(BIAS: ${BIAS_DIR})

#MESSAGE(STATUS ${BIAS_LIBRARIES})

ADD_EXECUTABLE( MultipleCueEstimation main.cpp MCE.cpp MCE.h)
TARGET_LINK_LIBRARIES( MultipleCueEstimation ${OpenCV_LIBS} ${BIAS_LIBRARIES} ${CMAKE_SOURCE_DIR}/LineMatchingSourceCode/build/libLineMatching.so)

